test/fail/not_expr_last_stmt_match_byval.cll
match:none (true) byvalue {
    true {
        null;
    }
    default {
        type x = { X<int> };
    }
};
0;
